--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -194,6 +194,10 @@
                                 <label>TotalAmount</label>
                                 <input type="number" id="txtTotalAmount" name="TotalAmount" class="form-control form-control-sm" readonly />
                             </div>
+                            <div class="hide">
+                                <label>PerQty</label>
+                                <input type="number" id="txtPerQty" name="PerQty" class="form-control form-control-sm" readonly />
+                            </div>
 
                             <div class="col-md-2">
                                 <label for="" class="col-form-label" style="visibility:hidden"> Add To List</label>             <div>
@@ -386,7 +390,7 @@
         var txtTotalProductQty = $("#txtTotalProductQty");
         var txtTotalQty = $("#txtTotalQty");
         var txtTotalAmount = $("#txtTotalAmount");
-
+        var txtPerQty = $("#txtPerQty");
 
 
         var ddlttprice = $("#ddlttprice");
@@ -575,8 +579,9 @@
                     var td10 = "<td class='hide ProductId'>" + ddlProductName.val() + "</td>";
                 var td11 = "<td class='hide MeasurementId'>" + ddlMeasurementName.val() + "</td>";
                 var td12 = "<td class='hide '>" + dropDownSelectedText("ddlQtyUnit") + "</td>";
+                var td13 = "<td class='hide '>" + txtQuanity.val()+ "</td>";
 
-                var tr = "<tr class='text-sm'>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + td11 + td12+ "</tr>";
+                var tr = "<tr class='text-sm'>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + td11 + td12 + td13+"</tr>";
 
 
 
@@ -866,9 +871,10 @@
                                Discount: tds.eq(5).html(),
                                FinishGoodProductInfoId: tds.eq(9).html(),
                                MeasurementSize: tds.eq(2).html(),
-                                DiscountTk: tds.eq(6).html(),
-                                QtyKG: tds.eq(11).html()
-
+                               DiscountTk: tds.eq(6).html(),
+                                QtyKG: tds.eq(11).html(),
+                               
+                                BoxQuanity: tds.eq(12).html()
 
 
                             });
