--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturnAdjust.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturnAdjust.cshtml
@@ -14,7 +14,7 @@
             <th>#SL</th>
             <th>Product Name</th>
             <th>Unit Name</th>
-            <th>Measurment Name</th>
+            <th class="hide">Measurment Name</th>
             <th>Measurment Size</th>
             <th>Return Qty</th>
             <th>Return Unit Price</th>
@@ -31,9 +31,9 @@
             <td class="text-center">@sl</td>
             <td class="text-center">@item.FinishGoodProductName</td>
             <td class="text-center">@item.QtyKG</td>
-            <td class="text-center">@item.MeasurementName</td>
+            <td class="text-center hide">@item.MeasurementName</td>
             <td class="text-center">@item.MeasurementSize</td>
-            <td class="text-center">@item.ReturnQuanity</td>
+            <td class="text-center">@item.BoxQuanity</td>
             <td class="text-center">@item.ReturnPerUnitPrice</td>
             <td class="text-center">@item.ReturnTotalPrice</td>
             <td class="text-center">@item.ReturnDate</td>
