--- a/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
@@ -38,7 +38,7 @@
                     <td class="text-center">@item.InvoiceNo</td>
                     <td class="text-center">@item.FinishGoodProductName</td>
                     <td class="text-center">@item.QtyKG</td>
-                    <td class="text-center">@item.ReturnQuanity</td>
+                    <td class="text-center">@item.BoxQuanity</td>
                     <td class="text-center">@item.ReturnPerUnitPrice</td>
                     <td class="text-center">@item.ReturnDate</td>
                     @*<td class="text-center">@item.Status</td>*@
