--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
@@ -33,8 +33,9 @@
             <th>#SL</th>
             <th>Product Name</th>
             <th>UnitQty</th>
-            <th>Measurment Name</th>
+            <th class="hide">Measurment Name</th>
             <th>Measurment Size</th>
+            <th class="hide">Box Quantity</th>
             <th>Sales Quantity</th>
             <th>Sales Unit Price</th>
             <th>Return Qty</th>
@@ -51,19 +52,29 @@
             <td class="text-center">@sl</td>
             <td class="text-center">@item.FinishGoodProductName</td>
             <td class="text-center">@item.QtyKG</td>
-            <td class="text-center">@item.MeasurementName</td>
+            <td class="text-center hide">@item.MeasurementName</td>
             <td class="text-center">@item.MeasurementSize</td>
-            <td class="text-center">@item.Quanity</td>
+            <td class="text-center hide">@item.Quanity</td>
+            <td class="text-center">@item.BoxQuanity</td>
             <td class="text-center">@item.Price</td>
-            <td class="text-center " contenteditable='true'></td>
-            <td class="text-center" contenteditable='true'></td>
+            <td class="text-center" style="width:10%">
+                <input type="number" class="returnqty form-control form-control-sm " value="0" />
+                <span class="error hide">Quantity must be <=available Quantity</span>
+            </td>
+            <td class="text-center" style="width:10%">
+                <input type="number" class="returnprice form-control form-control-sm " value="0" />
+                @*<span class="error hide">Quantity must be <=available Quantity</span>*@
+            </td>
+            @*<td class="text-center " contenteditable='true'></td>
+        <td class="text-center" contenteditable='true'></td>*@
             @*<td class="text-center"><input type="number" /></td>
-            <td class="text-center"><input type="number" /></td>*@
+        <td class="text-center"><input type="number" /></td>*@
             @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
             <td class="hide">@item.FinishGoodProductInfoId</td>
             <td class="hide">@item.MeasurementId</td>
             <td class="hide">@item.FGRId</td>
-     
+
+
         </tr>
         }
     </tbody>
