--- a/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
@@ -51,10 +51,29 @@
                                     <div class="card-body text-sm">
                                         <div class="row" style="margin-top:-15px">
 
+                                            <div class="col-md-2" style="margin-top:-5px">
+                                                <label class="col-form-label">InvoiceNo </label>
+                                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
+                                            </div>
 
-
-
-
+                                            <div class="col-md-2">
+                                                <label class="control-label font-weight-bold">From Date</label>
+                                                <div class="input-group input-group-sm ">
+                                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptFromDate" />
+                                                    <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
+                                                        <span class="input-group-text">&#10008;</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-2">
+                                                <label class="control-label font-weight-bold">To Date</label>
+                                                <div class="input-group input-group-sm ">
+                                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptToDate" />
+                                                    <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
+                                                        <span class="input-group-text">&#10008;</span>
+                                                    </div>
+                                                </div>
+                                            </div>
 
                                         </div>
 
@@ -102,6 +121,9 @@
 
     <script type="text/javascript">
 
+        var SearchAny = $("#SearchAny");
+        var dptFromDate = $("#dptFromDate");
+        var dptToDate = $("#dptToDate");
 
 
         $(document).ready(function () {
@@ -111,26 +133,61 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+
+            dptFromDate.prop('readonly', true);
+            dptToDate.prop('readonly', true);
+            dptFromDate.css("background-color", "#fff");
+            dptToDate.css("background-color", "#fff");
+            $('#dptFromDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true
+            }).on('change', function () {
+                $('.datepicker').hide();
+            });
+            $('#dptToDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true
+            }).on('change', function () {
+                $('.datepicker').hide();
+            });
+
+
             LoadSalesReturnAdjust()
             
         })
 
-        //function LoadSalesReturnAdjust() {
-        //    debugger;
-        //    var data = { flag: 'View' }
-        //    $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/GetSalesReturnAdjustList', data)).then(function (res, status) {
-        //        console.log(res);
-        //        if (status === "success") {
-        //            $("#dataContainer").empty();
-        //            $("#dataContainer").append(res);
-        //        }
-        //    }).fail(function (err) { console.log(err) })
-        //}
+
+        $(document).on('click', 'div.remove-date', function () {
+            if ($(this).hasClass("dptToDate")) {
+                if (dptToDate.val() !== '') {
+                    dptToDate.val('');
+                }
+            }
+            if ($(this).hasClass("dptFromDate")) {
+                if (dptFromDate.val() !== '') {
+                    dptFromDate.val('');
+                }
+            }
+        })
+
+        SearchAny.keyup(function () {
+            LoadSalesReturnAdjust()
+        })
+
+        dptToDate.change(function () {
+            LoadSalesReturnAdjust();
+        })
+
+        dptFromDate.change(function () {
+            LoadSalesReturnAdjust();
+        })
 
         function LoadSalesReturnAdjust() {
             debugger;
 
-            var data = { flag: "View" };
+            var data = { flag: "View", invoiceNo: $.trim(SearchAny.val()),fromDate: dptFromDate.val(), toDate: dptToDate.val() };
 
             $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetSalesReturnAdjustList', data)).then(function (res, status) {
                 console.log(status);
