--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockpurchaseList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockpurchaseList.cshtml
@@ -14,7 +14,7 @@
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">Supplier Name</th>
                     <th style="vertical-align:middle">PO Number</th>
-                    <th style="vertical-align:middle">Invoice NO</th>
+                    <th style="vertical-align:middle">Invoice No</th>
                     <th style="vertical-align:middle">Invoice Date</th>
                     <th style="vertical-align:middle">Chalan No</th>
                     <th style="vertical-align:middle">EntryDate</th>
