--- a/ERPWeb/Views/AgroConfiguration/_ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ProductCommision.cshtml
@@ -8,7 +8,7 @@
 <div class="col-md-12">
     <table class="table table-responsive-lg table-bordered table-hover text-sm">
         <thead class="btn-dark">
-            <tr>
+            <tr class="text-center">
                 <td style="vertical-align:middle">#Sl</td>
                 <td style="vertical-align:middle">Year</td>
                 <td style="vertical-align:middle">Product Name</td>
