--- a/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
@@ -1,7 +1,140 @@
-﻿
-@{
-    ViewBag.Title = "SalesCommission";
+﻿@{
+    ViewBag.Title = "SalesCommision";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<div class="row">
+
+
+
+
+    <div class="card-body shadow">
+
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card shadow card-gray-dark">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-navy shadow">
+                    <div class="card-header">
+                        <div class="row text-sm">
+                            <div class="col-md-2">
+                                <h4>Search by:</h4>
+                            </div>
+                            <div class="col-md-2">
+                                @*<label class="control-label" for="ddlProductName">Product Name</label>*@
+                                @Html.DropDownList("ddlInvoiceNo", (IEnumerable<SelectListItem>)ViewBag.ddlInvoiceNo, "--Invoice --", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+
+                            </div>
+                            <div class="col-8">
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" style="margin-top:-10px">
+                <div class="card ">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-12 text-sm text-sm" id="dataContainer" style="overflow-y:scroll">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+</div>
+
+<div class="modal fade" id="CommissionDetails" role="dialog" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header alert-secondary">
+                <h4 id="modalHeading" class="modal-title">Commission Details</h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body" id="dataContainer2">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script type="text/javascript">
+        var ddlInvoiceNo = $("#ddlInvoiceNo");
+
+        $(document).ready(function () {
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+
+            loadCommissionOnProduct();
+        })
+
+        ddlInvoiceNo.change(function () {
+
+            loadCommissionOnProduct();
+
+        })
+
+        function loadCommissionOnProduct() {
+
+            var data = { flag: "list", invoiceNo: ddlInvoiceNo.val(), fdate: "", tdate: "" };
+
+            $.when(getReqWithData('html', 'GET', '/AgroConfiguration/SalesCommission', data)).then(function (res, status) {
+                console.log(status);
+                if (status === "success") {
+                    $("#dataContainer").fadeOut('500', function () {
+                        $("#dataContainer").empty();
+                        $("#dataContainer").append(res).fadeIn('500');
+                    });
+                }
+            }).fail(function (error) {
+                console.log(error);
+            });
+
+        }
+
+        $(document).on('click', 'a.data-item-detail', function (e) {
+            e.preventDefault();
+            $("#dataContainer2").empty();
+            var id = $(this).attr("data-item-detail");
+            if (TryParseInt(id, 0) > 0) {
+                var data = { flag: "view", id: id };
+                $.when(getReqWithData('html', 'GET', '/AgroConfiguration/SalesCommission', data)).then(function (res, status) {
+                    console.log(status);
+                    if (status === "success") {
+                        $("#dataContainer2").empty();
+                        $("#dataContainer2").append(res);
+                        $("#CommissionDetails").modal('show');
+                    }
+                }).fail(function (error) {
+                    console.log(error);
+                })
+            }
+        })
+
+    </script>
+
+
+
 }
 
-<h2>SalesCommission</h2>
 
