some new change

--- a/ERPWeb/Views/AgroConfiguration/_ALLRawMaterialReturnListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ALLRawMaterialReturnListview.cshtml
@@ -16,7 +16,7 @@
                     <th style="vertical-align:middle">UnitName</th>
                     <th style="vertical-align:middle">Quantity</th>
                     <th style="vertical-align:middle">ReturnType</th>
-                    <th style="vertical-align:middle">Return Date</th>
+                    @*<th style="vertical-align:middle">Return Date</th>*@
                     <th style="vertical-align:middle">Status</th>
                    
                 </tr>
@@ -34,7 +34,7 @@
                         <td class="text-center">@item.UnitName</td>
                         <td class="text-center">@item.Quantity</td>
                         <td class="text-center">@item.ReturnType</td>
-                        <td class="text-center">@item.EntryDate</td>
+                        @*<td class="text-center">@item.EntryDate</td>*@
                         <td class="text-center">@item.Status</td>
 
 
