--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -16,7 +16,7 @@
 </style>
 <div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12">
-        <div class="card card-gray shadow">
+        <div class="card card-navy shadow">
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-3">
@@ -25,10 +25,19 @@
                             <i class="fas fa-arrow-alt-circle-left"></i>
                         </a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <h5 class="text-center text-bold">Challan & Invoice Posting</h5>
                     </div>
+
                     <div class="col-md-3">
+                        @*<label>Payable Amount</label>*@
+                        <input type="number" id="ddlpayableamount" name="ddlpayableamount" class="form-control form-control-sm" readonly />
+                    </div>
+                    <div class="col-md-1" style="margin-top:0px;">
+                        @*<label for="" class="control-label" style="visibility:hidden"> Add To List</label>*@
+                        <div class="clearfix">
+                            <button type="submit" class="btn btn-sm btn-success float-right" id="saveButton" title="Save"><i class="fas fa-paper-plane"></i>Save</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -306,10 +315,10 @@
 
 
 
-                <div class="row ">
+                @*<div class="row ">
 
-                    <div class="container-fluid" @*style="background-color:#e7f1f6;"*@>
-                        @*<h5 style="border-bottom:2px solid #f87878">Payment</h5>*@
+                    <div class="container-fluid" style="background-color:#e7f1f6;">
+                        <h5 style="border-bottom:2px solid #f87878">Payment</h5>
                         <div class="row justify-content-center">
 
                             <div class="col-md-12 ">
@@ -335,7 +344,6 @@
                                         <div class="clearfix">
                                             <button type="submit" class="btn btn-sm btn-success text-bold float-left" id="saveButton" title="Save"><i class="fas fa-paper-plane"></i>Save</button>
                                         </div>
-
                                     </div>
 
 
@@ -349,7 +357,7 @@
                     </div>
 
 
-                </div>
+                </div>*@
 
 
 
